examples/fail/semantic/return_type_mismatch.bina
// EXPECT_SEMANTIC_ERROR: cannot return value of type string
fn main() -> int {
    return "hello";
}
